[tool.poetry]
name = "vir-backend"
version = "0.1.0"
description = ""
authors = ["Arthur Zanella Lovato <arthur.zanella.lovato.1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
